# EE576-Machine-Vision

./: README.md
project1/: CMakeLists.txt  Readme.md
project1/include/: ImageViewer.h  constants.h
project1/src/: ImageViewer.cpp  main.cpp
project2/: CMakeLists.txt  Readme.md
project2/include/: ImageTransformer.h  constants.h
project2/src/: ImageTransformer.cpp  main.cpp
project3/: CMakeLists.txt  Readme.md
project3/include/: BagOfWords.h  ImageProcessor.h  constants.h
project3/src/: BagOfWords.cpp  ImageProcessor.cpp  bow.cpp  viewer.cpp
project4/: CMakeLists.txt  Readme.md
project4/include/: BagOfWords.h  DataProvider.h  constants.h
project4/src/: BagOfWords.cpp  DataProvider.cpp  bow.cpp
project5/: CMakeLists.txt  Readme.md
project5/include/: ImageFlow.h  constants.h
project5/src/: ImageFlow.cpp  main.cpp
